[package]
name = "aoc22"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
pathfinding = "4.0.0"
regex = "1"
serde_json = "1.0"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "benchmark"
harness = false
